# game_gateway

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  bench_cpp20.csv  build.sh  coroutine_bench  cpp20_bench.csv  docker-compose.yml  start.sh
cmake/: FindMuduo.cmake
config/: dev.yaml
db/: schema.sql
deploy/: docker-compose.yml
docs/: perf.md
include/: user_service.pb.h
include/business/login/: login_handler.h
include/common/: config.h  config_manager.h  context_holder.h  logger.h  request_context.h  signal_handler.h  trace.h
include/config/: config.h
include/coroutine/: coroutine_scheduler.h  thread_pool.h
include/coroutine_cpp20/: advanced_scheduler.h
include/memory/: MemPool.h  memory_pool.h
include/middleware/: RedisClient.h
include/middleware/breaker/: circuit_breaker.h
include/middleware/brpc/: brpc_client.h
include/middleware/kafka/: kafka_producer.h
include/middleware/limiter/: token_bucket.h
include/middleware/monitor/: prometheus.h
include/middleware/mysql/: mysql_conn.h  mysql_pool.h
include/middleware/queue/: lockfree_queue.h
include/middleware/redis/: redis_client.h
include/middleware/zerocopy/: writev_helper.h
include/network/: codec.h  connection.h  server.h
include/network/udp/: udp_server.h
proto/: udp.proto  user_service.proto
scripts/: bench_cpp20.sh  perf_test.sh  start_all.sh  stop_all.sh  stress_test.sh
src/: main.cpp  main.cpp.bak  metrics_server.cpp  user_service.pb.cc
src/business/login/: login_handler.cpp  login_handler_cpp20.cpp
src/common/: config.cpp  config_manager.cpp  context_holder.cpp  logger.cpp  signal_handler.cpp  trace.cpp
src/config/: config.cpp
src/coroutine/: coroutine_scheduler.cpp  thread_pool.cpp
src/coroutine_cpp20/: advanced_scheduler.cpp  scheduler.h  task.h
src/memory/: memory_pool.cpp
src/middleware/breaker/: circuit_breaker.cpp
src/middleware/brpc/: brpc_client.cpp
src/middleware/kafka/: kafka_producer.cpp
src/middleware/limiter/: token_bucket.cpp
src/middleware/monitor/: prometheus.cpp
src/middleware/mysql/: mysql_conn.cpp  mysql_pool.cpp
src/middleware/redis/: redis_client.cpp
src/network/: CMakeLists.txt  codec.cpp  connection.cpp  server.cpp
src/network/udp/: udp_server.cpp
tests/benchmark/: coroutine_bench.cpp  full_benchmark.cpp
tests/e2e/: e2e_concurrency.py  e2e_login.py  metrics.py
tests/memory/: memory_tests.cpp
tests/middleware/brpc/: brpc_tests.cpp
tests/middleware/kafka/: kafka_tests.cpp
tests/middleware/mysql/: mysql_tests.cpp
tests/middleware/redis/: redis_tests.cpp
tests/network/: concurrency_test.py  demo_client.py  network_tests.cpp  run_tests.sh  udp_advance_test.py  udp_test.py
